# de.mrh.launcher

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  README.txt  VERSION.txt
pkg/FSRoot/Output/Default/: ListPackages.mrhog
pkg/FSRoot/de_DE/: NoPackages.mrhog
pkg/FSRoot/en_US/: NoPackages.mrhog
res/pkg/: Configuration.conf
res/pkg/FSRoot/Output/de_DE/: ListPackages.mrhog
res/pkg/LaunchTrigger/Default/: LaunchTrigger.mrhit
src/: Main.cpp
src/Module/: CheckService.cpp  CheckService.h  LaunchPackage.cpp  LaunchPackage.h  Launcher.cpp  Launcher.h  SpeechOutput.cpp  SpeechOutput.h
src/Package/: Package.cpp  Package.h  PackageList.cpp  PackageList.h
